--- a/src/runtime/ide.html
+++ b/src/runtime/ide.html
@@ -26,7 +26,7 @@
   <div id="output">
     <label for="code">Output</label> 
     <br/>
-    <textarea id="results" name="results"></textarea>
+    <textarea id="results" name="results" disabled></textarea>
   </div>
   
   <script type="text/javascript" src="./ide.js"></script>
