Added loading to output box
Updated output field to include output from all responses, not just the last print from parser. Also added a loading notification

Co-Authored-By: Joseph Hale <47901316+jhale1805@users.noreply.github.com>
Co-Authored-By: Sai Nishanth Vaka <vsainishanth@gmail.com>
Co-Authored-By: Rithvik Arun <43283635+rarun321@users.noreply.github.com>

--- a/src/runtime/ide.html
+++ b/src/runtime/ide.html
@@ -13,7 +13,7 @@
     <textarea id="code" name="code"></textarea>
   </div>
   <div id="output">
-    <label for="code">Output</label> 
+    <label id="output-label" for="code">Output</label>
     <br/>
     <textarea id="results" name="results" disabled></textarea>
   </div>
