Final Cleanup for Submission
Fixed a minor bug with `for` loops and updated all the documentation with the prefernces requested for submission.

Co-authored-by: jgjanes <jgjanes@users.noreply.github.com>
Co-authored-by: Sai Nishanth Vaka <vsainishanth@gmail.com>

--- a/src/runtime/ide.html
+++ b/src/runtime/ide.html
@@ -1,3 +1,10 @@
+<!-- 
+ Authors: Joseph Hale, Jacob Janes, Rithvik Arun, 
+Sai Nishanth Vaka, and Jacob Hreshchyshyn
+ Purpose: HTML structure for the browser based IDE for Codeable
+ Date: 29 Apr 2022
+ Version: 0.1.0
+  -->
 <html>
 
 <head>
